erDiagram
    COUNTRIES ||--o{ EMPLOYEES : "works in"
    COUNTRIES ||--o{ USERS : "scopes"
    CURRENCIES ||--o{ COUNTRIES : "local currency"
    CURRENCIES ||--o{ FX_RATES : "rate per date"
    EMPLOYEES ||--o{ PAY_CHANGES : "has"
    PAY_CHANGES ||--|{ PAY_ITEMS : "sets"
    PAY_COMPONENTS ||--o{ PAY_ITEMS : "type of"
    PAY_FREQUENCIES ||--o{ PAY_ITEMS : "paid"
    PAY_FREQUENCIES ||--o{ PAY_COMPONENTS : "default"
    USERS ||--o{ AUTH_TOKENS : "reset or invite"
    USERS ||--o{ PAY_CHANGES : "records"
    USERS ||--o{ CHANGE_LOG : "made"

    USERS {
        uuid id PK
        text email UK
        text name
        text password_hash "Argon2id, empty until invite accepted"
        text role "global_hr or country_hr"
        char country_code FK "set for country_hr"
        boolean is_active
        int token_version "raised on reset or deactivation"
        timestamptz last_login_at
    }
    AUTH_TOKENS {
        uuid id PK
        uuid user_id FK
        text purpose "reset or invite"
        text token_hash UK "SHA-256 of the emailed token"
        timestamptz expires_at "30 minutes or 72 hours"
        timestamptz used_at "single use"
    }
    EMPLOYEES {
        uuid id PK
        text employee_code UK
        text first_name
        text last_name
        text email
        text job_title
        text job_level
        text department
        char country_code FK
        text region "state, province or territory"
        text employment_type "full_time, part_time, contractor, intern"
        numeric fte
        date hire_date
        text status "active or inactive"
        date inactive_on
        jsonb country_fields "validated per country"
    }
    PAY_CHANGES {
        uuid id PK
        uuid employee_id FK
        date effective_from
        text reason "hire, promotion, revision, correction, import"
        text note
        uuid created_by FK
        timestamptz created_at
    }
    PAY_ITEMS {
        uuid id PK
        uuid employee_id FK
        uuid pay_change_id FK
        uuid component_id FK
        bigint amount_minor "per period, local currency"
        char currency_code FK
        text frequency_code FK
        date effective_from
        date effective_to "open while current"
    }
    PAY_COMPONENTS {
        uuid id PK
        text code
        text name
        text category "earning, allowance, bonus, employer_contribution, benefit, other"
        char country_code FK "empty means all countries"
        text default_frequency FK
        boolean is_active
    }
    PAY_FREQUENCIES {
        text code PK "weekly to yearly"
        text name
        smallint periods_per_year "52, 26, 12, 6, 4, 2, 2, 1"
    }
    COUNTRIES {
        char code PK "US, CA, AU, IN"
        text name
        char currency_code FK
    }
    CURRENCIES {
        char code PK "USD, CAD, AUD, INR"
        text name
        smallint minor_digits
    }
    FX_RATES {
        char currency_code PK
        date rate_date PK
        numeric units_per_usd
        text source
        timestamptz fetched_at
    }
    CHANGE_LOG {
        uuid id PK
        text entity_type "employee, pay_change, pay_component, user"
        uuid entity_id
        text action "created, updated, inactivated, transferred"
        jsonb changes "old and new values per field"
        char country_code "for scope filtering"
        uuid changed_by FK
        timestamptz changed_at
    }
